Authenticated Dropdown, fixed image stretching on smaller resolution

--- a/src/components/ProductCard/responsive.scss
+++ b/src/components/ProductCard/responsive.scss
@@ -13,7 +13,7 @@
   }
   .product-card-image {
     width: 100%;
-    height: 95%;
+    height: 100%;
   }
 }
 @media screen and (max-width: $mobile) {
